@@ -11,6 +11,7 @@
 ==== API changes ====
  * Removed deprecated MultiStart::setStartingPoints/getStartingPoints
  * Removed deprecated KarhunenLoeveResult::getEigenValues
+ * Removed deprecated coupling_tools.execute is_shell/workdir/shell_exe/check_exit_code arguments
 
 === Documentation ===
 
